241022_Docker2Kubernetes/4_k8s_resource_templates/1_pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: whoami-pod
  namespace: template-test
  labels:
    app: whoami-pod
spec:
  containers:
    - name: whoami
      image: traefik/whoami
      ports:
        - containerPort: 80
