241022_Docker2Kubernetes/4_k8s_resource_templates/pvc.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
        - name: mypd
          mountPath: /var/www/html
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: mypvc
# k get pod -o wide
