241022_Docker2Kubernetes/4_k8s_resource_templates/service_nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: first-service-nodeport
  namespace: template-test
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30303
