241022_Docker2Kubernetes/4_k8s_resource_templates/3_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-ingress
  namespace: template-test
  annotations:
    # ingress.kubernetes.io/whitelist-source-range: "1.1.1.1/24"

spec:
  rules:
  - host: my.first.pod.io
    http:
      paths:
      - backend:
          service:
            name: first-service-cluster
            port:
              number: 80
        path: /
        pathType: Prefix
