241022_Docker2Kubernetes/4_k8s_resource_templates/service_+_endpoint.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: outside-services

---
apiVersion: v1
kind: Endpoints
metadata:
  name: outside-svc # must match
  namespace: outside-services
subsets:
  - addresses:
    # - ip: 192.168.5.154
    - ip: 192.168.5.144
    ports:
    - port: 443
    # - name: http
    #   port: 80
    # - name: https
    #   port: 443

---
apiVersion: v1
kind: Service
metadata:
  name: outside-svc # must match
  namespace: outside-services
spec:
 ports:
    - protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: selfsigned
  name: outside-ingress
  namespace: outside-services
spec:
  rules:
  - host: outside.local.x.x.x.x.sslip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: outside-svc
            port:
              number: 443
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - outside.local.x.x.x.x.sslip.io
    secretName: outside-cert-secret # < cert-manager will store the created certificate in this secret.
